# ground-cow

./: .env  .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.override.yml  docker-compose.yml
backend/: .coveragerc  README.md  db.py  docker-postgresql.yml  main.py  pyproject.toml  pytest.ini  run_tests.sh  start_db.py
backend/app/: main.py
backend/app/alembic/: README.md  env.py
backend/app/alembic/versions/: 03105556323e_new_earthquakes_table.py  0c0ca2db16b5_add_initial_table.py  0c0ca2db16b5_added_initial_table.py  373f736c04c7_add_ondelete_constraints.py  3fba3dee0a18_add_zone_for_user.py  5099ba781ed1_use_bigint_for_earthquake_id.py  686a24fbec57_restart_id_sequences_from_0.py  7c2f98cea321_add_unique_constraint_for_user_email.py  af99897f1e1d_create_tables.py
backend/app/api/: README.md  __init__.py  deps.py
backend/app/api/routes/: __init__.py  alert.py  dashboard.py  earthquake.py  event.py  (+4 more)
backend/app/core/: auth.py  config.py  db.py  pre_start.py  seed.py
backend/app/models/: consts.py  models.py
backend/app/services/: alert.py  dashboard.py
backend/app/tests/: README.md  conftest.py  test_auth.py  test_db.py  test_deps.py  test_main.py  test_router_alert.py  test_router_dashboard.py  test_router_earthquake.py  test_router_event.py  test_router_report.py  test_router_user.py  test_router_zone.py  test_session.py
backend/models/: models.py
backend/router/: __init__.py  alert.py  test.py  user.py
backend/schema/: alert.py  user.py
backend/scripts/: format.sh  pre-start.sh  test.sh
backend/tests/: test_basic.py
(+172 files in other folders)
