[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.11",
    "sqlmodel>=0.0.24",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "alembic>=1.15.2",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.2",
    "uv>=0.6.14",
]
