[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "sqlmodel>=0.0.24",
    "pydantic-settings>=2.8.1",
    "psycopg[binary]>=3.2.6",
    "tenacity>=9.1.2",
    "google-auth>=2.40.1",
    "itsdangerous>=2.2.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "alembic>=1.15.2",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.2",
    "uv>=0.6.14",
]
